--- a/task_2/index.html
+++ b/task_2/index.html
@@ -17,11 +17,12 @@
 
     <!-- Isi -->
 
-    <form action="detail.php" method="get">
+    <form action="detail.php" method="GET">
         <!-- <div class="grid-container"> -->
-        <table border="1">
+        <table border="1" align="center">
             <tr>
                 <td>
+                    <h4 class="nama-benda">TV Samsung Neo QLED 4K</h4>
                     <div class="grid-item">
                         <input type="checkbox" id="barang1" class="cekbox" name="barang[]" value="TV Samsung">
                         <label for="barang1">
@@ -34,6 +35,7 @@
                 </td>
 
                 <td>
+                    <h4 class="nama-benda">Graphic Card Nvidia RTX 4090</h4>
                     <div class="grid-item">
                         <input type="checkbox" id="barang2" class="cekbox" name="barang[]" value="RTX 4090">
                         <label for="barang2">
@@ -46,6 +48,7 @@
                 </td>
 
                 <td>
+                    <h4 class="nama-benda">Iphone 14 Pro Max</h4>
                     <div class="grid-item">
                         <input type="checkbox" id="barang3" class="cekbox" name="barang[]" value="iphone 14">
                         <label for="barang3">
